<resources>
    <string name="app_name">Lab_Exam_3</string>
    <string name="get_started">GET STARTED</string>
    <string name="gym_name">Gym name:</string>
    <string name="enter_gym_name">Enter gym name</string>
    <string name="location">Location:</string>
    <string name="enter_location">Enter location</string>
    <string name="fee">Fee:</string>
    <string name="enter_fees">Enter fees</string>
    <string name="opening_hours">Opening Hours:</string>
    <string name="enter_time">Enter time</string>
    <string name="add">Add</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="contact_no">Contact No</string>
    <string name="update">Update</string>
    <string name="_name">Name</string>
    <string name="_age">Age</string>
    <string name="delete">Delete</string>
    <string name="find_a_gym">Find a gym</string>
    <string name="discover_your_potential">Discover Your Potential</string>
    <string name="find_your_gym">Find Your Gym</string>
    <string name="nutrition_guide">Nutrition Guide</string>
    <string name="add_a_gym">Add a Gym</string>
    <string name="instructors">Instructors</string>
    <string name="workouts_planner">Workouts Planner</string>
    <string name="progress_tracker">Progress Tracker</string>
    <string name="the_gym">THE GYM</string>
    <string name="_the_gym">THE GYM</string>
    <string name="my_profile">My Profile</string>
    <string name="my_gym">My Gym</string>
    <string name="membership">Membership</string>
    <string name="marketplace">Marketplace</string>
    <string name="settings">Settings</string>
    <string name="send_feedback">Send feedback</string>
    <string name="about_us">About us</string>
    <string name="log_out">log Out</string>
    <string name="_delete">Delete</string>
    <string name="_my_gym">My gym</string>
    <string name="edit">Edit</string>
    <string name="manza_fitness">Manza Fitness, Malabe </string>
    <string name="_my_profile">My Profile</string>
    <string name="_name_">Name</string>
    <string name="_age_">Age</string>
    <string name="_email_">Email</string>
    <string name="contact_no_">Contact No</string>
    <string name="weekly_progress">Weekly Progress</string>
    <string name="edit_profile_">Edit Profile</string>
    <string name="log_out_">Log Out</string>
    <string name="username">  Username</string>
    <string name="password">  Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="username_">Username</string>
    <string name="password_">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="sign_up_">Sign up</string>
    <string name="email_">Email</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="text">By downloading and using our gym mobile application, you agree to abide by the following terms and conditions. You must be at least 18 years old to use the app. All information provided must be accurate and truthful. The app is intended for personal use only; commercial use is prohibited. We are not liable for any injuries or damages resulting from the use of the app or the exercises provided within. Users are responsible for their own safety and should consult a physician before beginning any exercise program. We reserve the right to terminate access to the app for any reason without prior notice. Your privacy is important to us; please review our privacy policy for more information on how we collect and use your data. By continuing to use the app, you agree to these terms and conditions.</string>
    <string name="agree">Agree</string>
    <string name="find_a_gym_">Find a gym</string>
    <string name="empty" >_</string>
    <string name="hour">Hour</string>
    <string name="get_started_">GET STARTED</string>
</resources>


