<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".menu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="404dp"
        android:layout_height="891dp"
        android:layout_marginTop="16dp"
        android:alpha="0.70"
        android:background="@color/my_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="436dp"
            android:layout_height="65dp"
            android:background="?attr/colorSecondary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.906"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.001" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="436dp"
            android:layout_height="65dp"
            android:background="?attr/colorSecondary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.156"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.841" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton2"
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:contentDescription="@string/_my_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.011"
            app:srcCompat="?attr/actionModeCloseDrawable" />


        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="66dp"
            android:layout_height="60dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/_name_"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.989"
            app:srcCompat="@drawable/homen" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="76dp"
            android:layout_height="64dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/_my_profile"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.841"
            app:srcCompat="@drawable/loca" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="83dp"
            android:layout_height="68dp"
            android:layout_marginStart="316dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/_my_profile"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/prof" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="330dp"
            android:layout_height="660dp"
            android:background="@drawable/rounded_corner_background"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.944"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.032" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="62dp"
            android:layout_height="58dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.964"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar2"
            app:layout_constraintVertical_bias="0.008"
            app:srcCompat="@drawable/download" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="320dp"
            android:layout_height="598dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.857"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.343">

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/my_profile"
                android:onClick="onMyProfile"
                android:textColor="@color/my_secondary"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/my_gym"
                android:onClick="onMyGym"
                android:textColor="@color/my_secondary"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/membership"
                android:textColor="@color/my_secondary"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/marketplace"
                android:textColor="@color/my_secondary"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/settings"
                android:textColor="@color/my_secondary"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/send_feedback"
                android:textColor="@color/my_secondary"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button12"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/about_us"
                android:textColor="@color/my_secondary"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button13"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/log_out"
                android:onClick="onLogout"
                android:textColor="@color/my_secondary"
                android:textSize="20sp" />
        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


